# TKImages

./: .gitignore  run_client.bat  run_client.sh
Client/: AnimalFilterConsumer.py  App.py  BodyFilterConsumer.py  FormatFilterConsumer.py  SimilarThingsFilterConsumer.py  StyleFilterConsumer.py  components.json  config.ini  requirements.txt
Client/AnimalFilter/: AnimalFilter.py
Client/BodyFilter/: BodyFilter.py
Client/FormatFilter/: FormatFilter.py
Client/RabbitMq/: Query.py
Client/SimilarThingsFilter/: SimilarThingsFilter.py
Client/StyleFilter/: StyleFilter.py
Client/Utils/: QueryUtils.py
ImageFinderRabbitMqSetupApp/src/main/resources/: application.conf
people_server/: CMakeLists.txt  README.md  conanfile.txt
people_server/src/: SimplePocoHandler.cpp  SimplePocoHandler.h  config.ini  peopleServer.cpp  processRequest.cpp  processRequest.hpp
text_server/: README.md
